Fix width bug on mobile.

--- a/dev/app/styles/main.css
+++ b/dev/app/styles/main.css
@@ -1,5 +1,6 @@
 html{
   min-height: 100%;
+  min-width: 100%;
 }
 body{
   background-image: url('../images/blur2.png');  
@@ -8,6 +9,7 @@ body{
   background-size: cover;
   overflow-x: hidden; 
   min-height: 100%;
+  min-width: 100%;
 }
 h1, h2, h3, h4, h5, h6{
   color:white;
